[package]
name = "DLogProof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ibig = "0.3.6"
sha256 = "1.1.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
lazy_static = "1.4.0"
num-traits = "0.2.15"